# litestar-users-svelte

./: .gitignore  README.md  docker-compose.local.yaml
.devcontainer/: backend.Dockerfile  frontend.Dockerfile
backend/: .devcontainer.json  alembic.ini  pyproject.toml
backend/src/: main.py
backend/src/config/: __init__.py  general.py  server.py
backend/src/db/migrations/: env.py
backend/src/db/models/: user.py
backend/src/domain/system/: controllers.py  schemas.py
backend/src/domain/users/: config.py  controllers.py  schemas.py  service.py
backend/src/server/: controllers.py  plugins.py
frontend/: .devcontainer.json  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/domain/users/: schemas.ts  service.ts
frontend/src/domain/users/forms/: Login.svelte  Register.svelte
frontend/src/lib/: base_service.ts  store.svelte.ts  styles.css
frontend/src/lib/config/: schema.ts  service.ts
frontend/src/lib/forms/: utils.ts
frontend/src/lib/forms/formsnap_wrappers/: ControlWrapper.svelte  FieldWrapper.svelte
frontend/src/lib/popup/: Modal.svelte
frontend/src/routes/: +layout.svelte
frontend/src/routes/auth/login/: +page.svelte
frontend/src/routes/auth/register/: +page.svelte
frontend/src/services/: base_service.ts  http.ts  response.d.ts
frontend/static/: styles.css
