[project]
name = "litestar-users-svelte"
version = "0.1.0"
description = "Litestar-Users Svelte"
authors = [
    { name = "Michael Bosch", email = "michael@vonbosch.co.za" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=0.20.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.2",
    "litestar>=2.12.1",
    "litestar-users>=1.6.1",
    "quicksettings>=0.2.0",
    "structlog>=24.4.0",
    "uvicorn>=0.31.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["src", "tests"]

[tool.mypy]
packages = ["src", "tests"]
python_version = "3.12"
